Tue Sep  4 12:46:50 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/ACE.cpp: Reverted this change "Tue Sep  4 07:37:17 2001
	  Balachandran Natarajan  <bala@cs.wustl.edu>". Thanks to Irfan
	  for pointing that this change, changes the semantics of the
	  methods. 

Tue Sep  4 09:14:36 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/CDR_Stream.i:
        * ace/CDR_Stream.cpp:

          Work around a compiler bug in the latest Green Hills Multi200.
          Casting a float to an ACE_CDR::ULong* caused internal compiler
          errors if the code was inlined.

        * ace/config-vxworks5.x.h:
        * include/makeinclude/platform_vxworks5.x_ghs.GNU:

          Updated support for Green Hills Multi2000.

Tue Sep  4 07:41:42 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* THANKS: Added Eyal Neuman <eyal@tradertools.com> to the hall of
	  fame.

Tue Sep  4 07:37:17 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/ACE.cpp: Fixed a bug with recv_n_i (). The problem was form
	  returning the exact number of bytes from the for loop. If the
	  loop had executed once and if we get 0 in the next recv_i ()
	  call, then we should be returning the number of bytes read in
	  the previous iteration and not 0. Thanks to Eyal Neuman
	  <eyal@tradertools.com> for this fix. This closes bug 1015.

Tue Sep  4 07:08:30 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/ACE.cpp: Fixed a unicode error in teh Win32 builds. Acted as
	  a dumbo when I made this change yesterday:(

Mon Sep  3 20:08:25 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.cpp: Fixed a warning in TRU 64 builds.

Mon Sep  3 09:58:32 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* */Makefile: Updated dependencies

Mon Sep  3 09:44:46 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Select_Reactor_Base.cpp: Fixed a warning in Implicit
	  template builds.

Mon Sep  3 08:21:36 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
